// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TypeScript code generation #generateSource() should generate correct list with custom fragment 1`] = `
"/* tslint:disable */
/* eslint-disable */
//  This file was automatically generated and should not be edited.

// The episodes in the Star Wars trilogy
export enum Episode {
  NEWHOPE = \\"NEWHOPE\\", // Star Wars Episode IV: A New Hope, released in 1977.
  EMPIRE = \\"EMPIRE\\", // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  JEDI = \\"JEDI\\", // Star Wars Episode VI: Return of the Jedi, released in 1983.
}


export type Character = {
  __typename: \\"Character\\",
  // The ID of the character
  id?: string,
  // The name of the character
  name?: string,
  // The friends of the character, or an empty list if they have none
  friends?:  Array<Character | null > | null,
  // The friends of the character exposed as a connection with edges
  friendsConnection?: FriendsConnection,
  // The movies this character appears in
  appearsIn?: Array< Episode | null >,
};

export type Human = {
  __typename: \\"Human\\",
  // The ID of the human
  id?: string,
  // What this human calls themselves
  name?: string,
  // The home planet of the human, or null if unknown
  homePlanet?: string | null,
  // Height in the preferred unit, default is meters
  height?: number | null,
  // Mass in kilograms, or null if unknown
  mass?: number | null,
  // This human's friends, or an empty list if they have none
  friends?:  Array<Character | null > | null,
  // The friends of the human exposed as a connection with edges
  friendsConnection?: FriendsConnection,
  // The movies this human appears in
  appearsIn?: Array< Episode | null >,
  // A list of starships this person has piloted, or an empty list if none
  starships?:  Array<Starship | null > | null,
};

export type FriendsConnection = {
  __typename: \\"FriendsConnection\\",
  // The total number of friends
  totalCount?: number | null,
  // The edges for each of the character's friends.
  edges?:  Array<FriendsEdge | null > | null,
  // A list of the friends, as a convenience when edges are not needed.
  friends?:  Array<Character | null > | null,
  // Information for paginating this connection
  pageInfo?: PageInfo,
};

export type FriendsEdge = {
  __typename: \\"FriendsEdge\\",
  // A cursor used for pagination
  cursor?: string,
  // The character represented by this friendship edge
  node?: Character,
};

export type PageInfo = {
  __typename: \\"PageInfo\\",
  startCursor?: string | null,
  endCursor?: string | null,
  hasNextPage?: boolean,
};

export type Starship = {
  __typename: \\"Starship\\",
  // The ID of the starship
  id?: string,
  // The name of the starship
  name?: string,
  // Length of the starship, along the longest axis
  length?: number | null,
  coordinates?: Array< Array< number > > | null,
};

export type Droid = {
  __typename: \\"Droid\\",
  // The ID of the droid
  id?: string,
  // What others call this droid
  name?: string,
  // This droid's friends, or an empty list if they have none
  friends?:  Array<Character | null > | null,
  // The friends of the droid exposed as a connection with edges
  friendsConnection?: FriendsConnection,
  // The movies this droid appears in
  appearsIn?: Array< Episode | null >,
  // This droid's primary function
  primaryFunction?: string | null,
};

export type HeroAndFriendsNamesQueryVariables = {
  episode?: Episode | null,
};

export type HeroAndFriendsNamesQuery = {
  hero: ( {
      __typename: \\"Human\\",
      // The name of the character
      name: string,
      // The friends of the character, or an empty list if they have none
      friends:  Array<( {
          __typename: \\"Human\\",
          // The name of the character
          name: string,
        } | {
          __typename: \\"Droid\\",
          // The name of the character
          name: string,
        }
      ) | null > | null,
    } | {
      __typename: \\"Droid\\",
      // The name of the character
      name: string,
      // The friends of the character, or an empty list if they have none
      friends:  Array<( {
          __typename: \\"Human\\",
          // The name of the character
          name: string,
        } | {
          __typename: \\"Droid\\",
          // The name of the character
          name: string,
        }
      ) | null > | null,
    }
  ) | null,
};

export type FriendFragment = ( {
      __typename: \\"Human\\",
      // The name of the character
      name: string,
    } | {
      __typename: \\"Droid\\",
      // The name of the character
      name: string,
    }
  );
"
`;

exports[`TypeScript code generation #generateSource() should generate fragmented query operations 1`] = `
"/* tslint:disable */
/* eslint-disable */
//  This file was automatically generated and should not be edited.

export type Character = {
  __typename: \\"Character\\",
  // The ID of the character
  id?: string,
  // The name of the character
  name?: string,
  // The friends of the character, or an empty list if they have none
  friends?:  Array<Character | null > | null,
  // The friends of the character exposed as a connection with edges
  friendsConnection?: FriendsConnection,
  // The movies this character appears in
  appearsIn?: Array< Episode | null >,
};

export type Human = {
  __typename: \\"Human\\",
  // The ID of the human
  id?: string,
  // What this human calls themselves
  name?: string,
  // The home planet of the human, or null if unknown
  homePlanet?: string | null,
  // Height in the preferred unit, default is meters
  height?: number | null,
  // Mass in kilograms, or null if unknown
  mass?: number | null,
  // This human's friends, or an empty list if they have none
  friends?:  Array<Character | null > | null,
  // The friends of the human exposed as a connection with edges
  friendsConnection?: FriendsConnection,
  // The movies this human appears in
  appearsIn?: Array< Episode | null >,
  // A list of starships this person has piloted, or an empty list if none
  starships?:  Array<Starship | null > | null,
};

export type FriendsConnection = {
  __typename: \\"FriendsConnection\\",
  // The total number of friends
  totalCount?: number | null,
  // The edges for each of the character's friends.
  edges?:  Array<FriendsEdge | null > | null,
  // A list of the friends, as a convenience when edges are not needed.
  friends?:  Array<Character | null > | null,
  // Information for paginating this connection
  pageInfo?: PageInfo,
};

export type FriendsEdge = {
  __typename: \\"FriendsEdge\\",
  // A cursor used for pagination
  cursor?: string,
  // The character represented by this friendship edge
  node?: Character,
};

export type PageInfo = {
  __typename: \\"PageInfo\\",
  startCursor?: string | null,
  endCursor?: string | null,
  hasNextPage?: boolean,
};

// The episodes in the Star Wars trilogy
export enum Episode {
  NEWHOPE = \\"NEWHOPE\\", // Star Wars Episode IV: A New Hope, released in 1977.
  EMPIRE = \\"EMPIRE\\", // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  JEDI = \\"JEDI\\", // Star Wars Episode VI: Return of the Jedi, released in 1983.
}


export type Starship = {
  __typename: \\"Starship\\",
  // The ID of the starship
  id?: string,
  // The name of the starship
  name?: string,
  // Length of the starship, along the longest axis
  length?: number | null,
  coordinates?: Array< Array< number > > | null,
};

export type Droid = {
  __typename: \\"Droid\\",
  // The ID of the droid
  id?: string,
  // What others call this droid
  name?: string,
  // This droid's friends, or an empty list if they have none
  friends?:  Array<Character | null > | null,
  // The friends of the droid exposed as a connection with edges
  friendsConnection?: FriendsConnection,
  // The movies this droid appears in
  appearsIn?: Array< Episode | null >,
  // This droid's primary function
  primaryFunction?: string | null,
};

export type HeroAndFriendsNamesQuery = {
  hero: ( {
      __typename: \\"Human\\",
      // The name of the character
      name: string,
      // The friends of the character, or an empty list if they have none
      friends:  Array<( {
          __typename: \\"Human\\",
          // The name of the character
          name: string,
        } | {
          __typename: \\"Droid\\",
          // The name of the character
          name: string,
        }
      ) | null > | null,
    } | {
      __typename: \\"Droid\\",
      // The name of the character
      name: string,
      // The friends of the character, or an empty list if they have none
      friends:  Array<( {
          __typename: \\"Human\\",
          // The name of the character
          name: string,
        } | {
          __typename: \\"Droid\\",
          // The name of the character
          name: string,
        }
      ) | null > | null,
    }
  ) | null,
};

export type heroFriendsFragment = ( {
      __typename: \\"Human\\",
      // The friends of the character, or an empty list if they have none
      friends:  Array<( {
          __typename: \\"Human\\",
          // The name of the character
          name: string,
        } | {
          __typename: \\"Droid\\",
          // The name of the character
          name: string,
        }
      ) | null > | null,
    } | {
      __typename: \\"Droid\\",
      // The friends of the character, or an empty list if they have none
      friends:  Array<( {
          __typename: \\"Human\\",
          // The name of the character
          name: string,
        } | {
          __typename: \\"Droid\\",
          // The name of the character
          name: string,
        }
      ) | null > | null,
    }
  );
"
`;

exports[`TypeScript code generation #generateSource() should generate mutation operations with complex input types 1`] = `
"/* tslint:disable */
/* eslint-disable */
//  This file was automatically generated and should not be edited.

// The episodes in the Star Wars trilogy
export enum Episode {
  NEWHOPE = \\"NEWHOPE\\", // Star Wars Episode IV: A New Hope, released in 1977.
  EMPIRE = \\"EMPIRE\\", // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  JEDI = \\"JEDI\\", // Star Wars Episode VI: Return of the Jedi, released in 1983.
}


export type ReviewInput = {
  // 0-5 stars
  stars: number,
  // Comment about the movie, optional
  commentary?: string | null,
  // Favorite color, optional
  favorite_color?: ColorInput | null,
};

export type ColorInput = {
  red: number,
  green: number,
  blue: number,
};

export type Review = {
  __typename: \\"Review\\",
  // The number of stars this review gave, 1-5
  stars?: number,
  // Comment about the movie
  commentary?: string | null,
};

export type ReviewMovieMutationVariables = {
  episode?: Episode | null,
  review?: ReviewInput | null,
};

export type ReviewMovieMutation = {
  createReview?:  {
    __typename: \\"Review\\",
    // The number of stars this review gave, 1-5
    stars: number,
    // Comment about the movie
    commentary?: string | null,
  } | null,
};
"
`;

exports[`TypeScript code generation #generateSource() should generate query operations with inline fragments 1`] = `
"/* tslint:disable */
/* eslint-disable */
//  This file was automatically generated and should not be edited.

export type Character = {
  __typename: \\"Character\\",
  // The ID of the character
  id?: string,
  // The name of the character
  name?: string,
  // The friends of the character, or an empty list if they have none
  friends?:  Array<Character | null > | null,
  // The friends of the character exposed as a connection with edges
  friendsConnection?: FriendsConnection,
  // The movies this character appears in
  appearsIn?: Array< Episode | null >,
};

export type Human = {
  __typename: \\"Human\\",
  // The ID of the human
  id?: string,
  // What this human calls themselves
  name?: string,
  // The home planet of the human, or null if unknown
  homePlanet?: string | null,
  // Height in the preferred unit, default is meters
  height?: number | null,
  // Mass in kilograms, or null if unknown
  mass?: number | null,
  // This human's friends, or an empty list if they have none
  friends?:  Array<Character | null > | null,
  // The friends of the human exposed as a connection with edges
  friendsConnection?: FriendsConnection,
  // The movies this human appears in
  appearsIn?: Array< Episode | null >,
  // A list of starships this person has piloted, or an empty list if none
  starships?:  Array<Starship | null > | null,
};

export type FriendsConnection = {
  __typename: \\"FriendsConnection\\",
  // The total number of friends
  totalCount?: number | null,
  // The edges for each of the character's friends.
  edges?:  Array<FriendsEdge | null > | null,
  // A list of the friends, as a convenience when edges are not needed.
  friends?:  Array<Character | null > | null,
  // Information for paginating this connection
  pageInfo?: PageInfo,
};

export type FriendsEdge = {
  __typename: \\"FriendsEdge\\",
  // A cursor used for pagination
  cursor?: string,
  // The character represented by this friendship edge
  node?: Character,
};

export type PageInfo = {
  __typename: \\"PageInfo\\",
  startCursor?: string | null,
  endCursor?: string | null,
  hasNextPage?: boolean,
};

// The episodes in the Star Wars trilogy
export enum Episode {
  NEWHOPE = \\"NEWHOPE\\", // Star Wars Episode IV: A New Hope, released in 1977.
  EMPIRE = \\"EMPIRE\\", // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  JEDI = \\"JEDI\\", // Star Wars Episode VI: Return of the Jedi, released in 1983.
}


export type Starship = {
  __typename: \\"Starship\\",
  // The ID of the starship
  id?: string,
  // The name of the starship
  name?: string,
  // Length of the starship, along the longest axis
  length?: number | null,
  coordinates?: Array< Array< number > > | null,
};

export type Droid = {
  __typename: \\"Droid\\",
  // The ID of the droid
  id?: string,
  // What others call this droid
  name?: string,
  // This droid's friends, or an empty list if they have none
  friends?:  Array<Character | null > | null,
  // The friends of the droid exposed as a connection with edges
  friendsConnection?: FriendsConnection,
  // The movies this droid appears in
  appearsIn?: Array< Episode | null >,
  // This droid's primary function
  primaryFunction?: string | null,
};

export type HeroAndDetailsQuery = {
  hero: ( {
      __typename: \\"Human\\",
      // What this human calls themselves
      name: string,
      // Height in the preferred unit, default is meters
      height?: number | null,
    } | {
      __typename: \\"Droid\\",
      // What others call this droid
      name: string,
      // This droid's primary function
      primaryFunction?: string | null,
    }
  ) | null,
};

export type HeroDetailsFragment = ( {
      __typename: \\"Human\\",
      // Height in the preferred unit, default is meters
      height?: number | null,
    } | {
      __typename: \\"Droid\\",
      // This droid's primary function
      primaryFunction?: string | null,
    }
  );
"
`;

exports[`TypeScript code generation #generateSource() should generate simple nested query operations including input variables 1`] = `
"/* tslint:disable */
/* eslint-disable */
//  This file was automatically generated and should not be edited.

// The episodes in the Star Wars trilogy
export enum Episode {
  NEWHOPE = \\"NEWHOPE\\", // Star Wars Episode IV: A New Hope, released in 1977.
  EMPIRE = \\"EMPIRE\\", // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  JEDI = \\"JEDI\\", // Star Wars Episode VI: Return of the Jedi, released in 1983.
}


export type Character = {
  __typename: \\"Character\\",
  // The ID of the character
  id?: string,
  // The name of the character
  name?: string,
  // The friends of the character, or an empty list if they have none
  friends?:  Array<Character | null > | null,
  // The friends of the character exposed as a connection with edges
  friendsConnection?: FriendsConnection,
  // The movies this character appears in
  appearsIn?: Array< Episode | null >,
};

export type Human = {
  __typename: \\"Human\\",
  // The ID of the human
  id?: string,
  // What this human calls themselves
  name?: string,
  // The home planet of the human, or null if unknown
  homePlanet?: string | null,
  // Height in the preferred unit, default is meters
  height?: number | null,
  // Mass in kilograms, or null if unknown
  mass?: number | null,
  // This human's friends, or an empty list if they have none
  friends?:  Array<Character | null > | null,
  // The friends of the human exposed as a connection with edges
  friendsConnection?: FriendsConnection,
  // The movies this human appears in
  appearsIn?: Array< Episode | null >,
  // A list of starships this person has piloted, or an empty list if none
  starships?:  Array<Starship | null > | null,
};

export type FriendsConnection = {
  __typename: \\"FriendsConnection\\",
  // The total number of friends
  totalCount?: number | null,
  // The edges for each of the character's friends.
  edges?:  Array<FriendsEdge | null > | null,
  // A list of the friends, as a convenience when edges are not needed.
  friends?:  Array<Character | null > | null,
  // Information for paginating this connection
  pageInfo?: PageInfo,
};

export type FriendsEdge = {
  __typename: \\"FriendsEdge\\",
  // A cursor used for pagination
  cursor?: string,
  // The character represented by this friendship edge
  node?: Character,
};

export type PageInfo = {
  __typename: \\"PageInfo\\",
  startCursor?: string | null,
  endCursor?: string | null,
  hasNextPage?: boolean,
};

export type Starship = {
  __typename: \\"Starship\\",
  // The ID of the starship
  id?: string,
  // The name of the starship
  name?: string,
  // Length of the starship, along the longest axis
  length?: number | null,
  coordinates?: Array< Array< number > > | null,
};

export type Droid = {
  __typename: \\"Droid\\",
  // The ID of the droid
  id?: string,
  // What others call this droid
  name?: string,
  // This droid's friends, or an empty list if they have none
  friends?:  Array<Character | null > | null,
  // The friends of the droid exposed as a connection with edges
  friendsConnection?: FriendsConnection,
  // The movies this droid appears in
  appearsIn?: Array< Episode | null >,
  // This droid's primary function
  primaryFunction?: string | null,
};

export type HeroAndFriendsNamesQueryVariables = {
  episode?: Episode | null,
};

export type HeroAndFriendsNamesQuery = {
  hero: ( {
      __typename: \\"Human\\",
      // The name of the character
      name: string,
      // The friends of the character, or an empty list if they have none
      friends:  Array<( {
          __typename: \\"Human\\",
          // The name of the character
          name: string,
        } | {
          __typename: \\"Droid\\",
          // The name of the character
          name: string,
        }
      ) | null > | null,
    } | {
      __typename: \\"Droid\\",
      // The name of the character
      name: string,
      // The friends of the character, or an empty list if they have none
      friends:  Array<( {
          __typename: \\"Human\\",
          // The name of the character
          name: string,
        } | {
          __typename: \\"Droid\\",
          // The name of the character
          name: string,
        }
      ) | null > | null,
    }
  ) | null,
};
"
`;

exports[`TypeScript code generation #generateSource() should generate simple nested with required elements in lists 1`] = `
"/* tslint:disable */
/* eslint-disable */
//  This file was automatically generated and should not be edited.

export type Starship = {
  __typename: \\"Starship\\",
  // The ID of the starship
  id?: string,
  // The name of the starship
  name?: string,
  // Length of the starship, along the longest axis
  length?: number | null,
  coordinates?: Array< Array< number > > | null,
};

export type StarshipCoordsQuery = {
  starship?:  {
    __typename: \\"Starship\\",
    coordinates?: Array< Array< number > > | null,
  } | null,
};
"
`;

exports[`TypeScript code generation #generateSource() should generate simple query operations 1`] = `
"/* tslint:disable */
/* eslint-disable */
//  This file was automatically generated and should not be edited.

export type Character = {
  __typename: \\"Character\\",
  // The ID of the character
  id?: string,
  // The name of the character
  name?: string,
  // The friends of the character, or an empty list if they have none
  friends?:  Array<Character | null > | null,
  // The friends of the character exposed as a connection with edges
  friendsConnection?: FriendsConnection,
  // The movies this character appears in
  appearsIn?: Array< Episode | null >,
};

export type Human = {
  __typename: \\"Human\\",
  // The ID of the human
  id?: string,
  // What this human calls themselves
  name?: string,
  // The home planet of the human, or null if unknown
  homePlanet?: string | null,
  // Height in the preferred unit, default is meters
  height?: number | null,
  // Mass in kilograms, or null if unknown
  mass?: number | null,
  // This human's friends, or an empty list if they have none
  friends?:  Array<Character | null > | null,
  // The friends of the human exposed as a connection with edges
  friendsConnection?: FriendsConnection,
  // The movies this human appears in
  appearsIn?: Array< Episode | null >,
  // A list of starships this person has piloted, or an empty list if none
  starships?:  Array<Starship | null > | null,
};

export type FriendsConnection = {
  __typename: \\"FriendsConnection\\",
  // The total number of friends
  totalCount?: number | null,
  // The edges for each of the character's friends.
  edges?:  Array<FriendsEdge | null > | null,
  // A list of the friends, as a convenience when edges are not needed.
  friends?:  Array<Character | null > | null,
  // Information for paginating this connection
  pageInfo?: PageInfo,
};

export type FriendsEdge = {
  __typename: \\"FriendsEdge\\",
  // A cursor used for pagination
  cursor?: string,
  // The character represented by this friendship edge
  node?: Character,
};

export type PageInfo = {
  __typename: \\"PageInfo\\",
  startCursor?: string | null,
  endCursor?: string | null,
  hasNextPage?: boolean,
};

// The episodes in the Star Wars trilogy
export enum Episode {
  NEWHOPE = \\"NEWHOPE\\", // Star Wars Episode IV: A New Hope, released in 1977.
  EMPIRE = \\"EMPIRE\\", // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  JEDI = \\"JEDI\\", // Star Wars Episode VI: Return of the Jedi, released in 1983.
}


export type Starship = {
  __typename: \\"Starship\\",
  // The ID of the starship
  id?: string,
  // The name of the starship
  name?: string,
  // Length of the starship, along the longest axis
  length?: number | null,
  coordinates?: Array< Array< number > > | null,
};

export type Droid = {
  __typename: \\"Droid\\",
  // The ID of the droid
  id?: string,
  // What others call this droid
  name?: string,
  // This droid's friends, or an empty list if they have none
  friends?:  Array<Character | null > | null,
  // The friends of the droid exposed as a connection with edges
  friendsConnection?: FriendsConnection,
  // The movies this droid appears in
  appearsIn?: Array< Episode | null >,
  // This droid's primary function
  primaryFunction?: string | null,
};

export type HeroNameQuery = {
  hero: ( {
      __typename: \\"Human\\",
      // The name of the character
      name: string,
    } | {
      __typename: \\"Droid\\",
      // The name of the character
      name: string,
    }
  ) | null,
};
"
`;

exports[`TypeScript code generation #generateSource() should generate simple query operations including input variables 1`] = `
"/* tslint:disable */
/* eslint-disable */
//  This file was automatically generated and should not be edited.

// The episodes in the Star Wars trilogy
export enum Episode {
  NEWHOPE = \\"NEWHOPE\\", // Star Wars Episode IV: A New Hope, released in 1977.
  EMPIRE = \\"EMPIRE\\", // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  JEDI = \\"JEDI\\", // Star Wars Episode VI: Return of the Jedi, released in 1983.
}


export type Character = {
  __typename: \\"Character\\",
  // The ID of the character
  id?: string,
  // The name of the character
  name?: string,
  // The friends of the character, or an empty list if they have none
  friends?:  Array<Character | null > | null,
  // The friends of the character exposed as a connection with edges
  friendsConnection?: FriendsConnection,
  // The movies this character appears in
  appearsIn?: Array< Episode | null >,
};

export type Human = {
  __typename: \\"Human\\",
  // The ID of the human
  id?: string,
  // What this human calls themselves
  name?: string,
  // The home planet of the human, or null if unknown
  homePlanet?: string | null,
  // Height in the preferred unit, default is meters
  height?: number | null,
  // Mass in kilograms, or null if unknown
  mass?: number | null,
  // This human's friends, or an empty list if they have none
  friends?:  Array<Character | null > | null,
  // The friends of the human exposed as a connection with edges
  friendsConnection?: FriendsConnection,
  // The movies this human appears in
  appearsIn?: Array< Episode | null >,
  // A list of starships this person has piloted, or an empty list if none
  starships?:  Array<Starship | null > | null,
};

export type FriendsConnection = {
  __typename: \\"FriendsConnection\\",
  // The total number of friends
  totalCount?: number | null,
  // The edges for each of the character's friends.
  edges?:  Array<FriendsEdge | null > | null,
  // A list of the friends, as a convenience when edges are not needed.
  friends?:  Array<Character | null > | null,
  // Information for paginating this connection
  pageInfo?: PageInfo,
};

export type FriendsEdge = {
  __typename: \\"FriendsEdge\\",
  // A cursor used for pagination
  cursor?: string,
  // The character represented by this friendship edge
  node?: Character,
};

export type PageInfo = {
  __typename: \\"PageInfo\\",
  startCursor?: string | null,
  endCursor?: string | null,
  hasNextPage?: boolean,
};

export type Starship = {
  __typename: \\"Starship\\",
  // The ID of the starship
  id?: string,
  // The name of the starship
  name?: string,
  // Length of the starship, along the longest axis
  length?: number | null,
  coordinates?: Array< Array< number > > | null,
};

export type Droid = {
  __typename: \\"Droid\\",
  // The ID of the droid
  id?: string,
  // What others call this droid
  name?: string,
  // This droid's friends, or an empty list if they have none
  friends?:  Array<Character | null > | null,
  // The friends of the droid exposed as a connection with edges
  friendsConnection?: FriendsConnection,
  // The movies this droid appears in
  appearsIn?: Array< Episode | null >,
  // This droid's primary function
  primaryFunction?: string | null,
};

export type HeroNameQueryVariables = {
  episode?: Episode | null,
};

export type HeroNameQuery = {
  hero: ( {
      __typename: \\"Human\\",
      // The name of the character
      name: string,
    } | {
      __typename: \\"Droid\\",
      // The name of the character
      name: string,
    }
  ) | null,
};
"
`;

exports[`TypeScript code generation #generateSource() should handle comments in enums 1`] = `
"/* tslint:disable */
/* eslint-disable */
//  This file was automatically generated and should not be edited.

export type CommentTest = {
  __typename: \\"CommentTest\\",
  // This is a single-line comment
  singleLine?: string | null,
  // This is a multi-line
  // comment.
  multiLine?: string | null,
  enumCommentTest?: EnumCommentTestCase | null,
};

export enum EnumCommentTestCase {
  first = \\"first\\", // This is a single-line comment
  // This is a multi-line
  // comment.
  second = \\"second\\",
}


export type CustomScalarQuery = {
  commentTest?:  {
    __typename: \\"CommentTest\\",
    enumCommentTest?: EnumCommentTestCase | null,
  } | null,
};
"
`;

exports[`TypeScript code generation #generateSource() should handle interfaces at root 1`] = `
"/* tslint:disable */
/* eslint-disable */
//  This file was automatically generated and should not be edited.

export type InterfaceTestCase = {
  __typename: \\"InterfaceTestCase\\",
  prop?: string,
};

export type ImplA = {
  __typename: \\"ImplA\\",
  prop?: string,
  propA?: string,
};

export type ImplB = {
  __typename: \\"ImplB\\",
  prop?: string,
  propB?: number | null,
};

export type CustomScalarQuery = {
  interfaceTest: ( {
      __typename: \\"ImplA\\",
      prop: string,
      propA: string,
    } | {
      __typename: \\"ImplB\\",
      prop: string,
      propB?: number | null,
    }
  ) | null,
};
"
`;

exports[`TypeScript code generation #generateSource() should handle multi-line comments 1`] = `
"/* tslint:disable */
/* eslint-disable */
//  This file was automatically generated and should not be edited.

export type CommentTest = {
  __typename: \\"CommentTest\\",
  // This is a single-line comment
  singleLine?: string | null,
  // This is a multi-line
  // comment.
  multiLine?: string | null,
  enumCommentTest?: EnumCommentTestCase | null,
};

export enum EnumCommentTestCase {
  first = \\"first\\", // This is a single-line comment
  // This is a multi-line
  // comment.
  second = \\"second\\",
}


export type CustomScalarQuery = {
  commentTest?:  {
    __typename: \\"CommentTest\\",
    // This is a multi-line
    // comment.
    multiLine?: string | null,
  } | null,
};
"
`;

exports[`TypeScript code generation #generateSource() should handle single line comments 1`] = `
"/* tslint:disable */
/* eslint-disable */
//  This file was automatically generated and should not be edited.

export type CommentTest = {
  __typename: \\"CommentTest\\",
  // This is a single-line comment
  singleLine?: string | null,
  // This is a multi-line
  // comment.
  multiLine?: string | null,
  enumCommentTest?: EnumCommentTestCase | null,
};

export enum EnumCommentTestCase {
  first = \\"first\\", // This is a single-line comment
  // This is a multi-line
  // comment.
  second = \\"second\\",
}


export type CustomScalarQuery = {
  commentTest?:  {
    __typename: \\"CommentTest\\",
    // This is a single-line comment
    singleLine?: string | null,
  } | null,
};
"
`;

exports[`TypeScript code generation #generateSource() should handle unions at root 1`] = `
"/* tslint:disable */
/* eslint-disable */
//  This file was automatically generated and should not be edited.

export type UnionTestCase = PartialA | PartialB


export type PartialA = {
  __typename: \\"PartialA\\",
  prop?: string,
};

export type PartialB = {
  __typename: \\"PartialB\\",
  prop?: string,
};

export type CustomScalarQuery = {
  unionTest: ( {
      __typename: \\"PartialA\\",
      prop: string,
    } | {
      __typename: \\"PartialB\\",
      prop: string,
    }
  ) | null,
};
"
`;

exports[`TypeScript code generation #generateSource() should have __typename value matching fragment type on generic type 1`] = `
"/* tslint:disable */
/* eslint-disable */
//  This file was automatically generated and should not be edited.

export type Character = {
  __typename: \\"Character\\",
  // The ID of the character
  id?: string,
  // The name of the character
  name?: string,
  // The friends of the character, or an empty list if they have none
  friends?:  Array<Character | null > | null,
  // The friends of the character exposed as a connection with edges
  friendsConnection?: FriendsConnection,
  // The movies this character appears in
  appearsIn?: Array< Episode | null >,
};

export type Human = {
  __typename: \\"Human\\",
  // The ID of the human
  id?: string,
  // What this human calls themselves
  name?: string,
  // The home planet of the human, or null if unknown
  homePlanet?: string | null,
  // Height in the preferred unit, default is meters
  height?: number | null,
  // Mass in kilograms, or null if unknown
  mass?: number | null,
  // This human's friends, or an empty list if they have none
  friends?:  Array<Character | null > | null,
  // The friends of the human exposed as a connection with edges
  friendsConnection?: FriendsConnection,
  // The movies this human appears in
  appearsIn?: Array< Episode | null >,
  // A list of starships this person has piloted, or an empty list if none
  starships?:  Array<Starship | null > | null,
};

export type FriendsConnection = {
  __typename: \\"FriendsConnection\\",
  // The total number of friends
  totalCount?: number | null,
  // The edges for each of the character's friends.
  edges?:  Array<FriendsEdge | null > | null,
  // A list of the friends, as a convenience when edges are not needed.
  friends?:  Array<Character | null > | null,
  // Information for paginating this connection
  pageInfo?: PageInfo,
};

export type FriendsEdge = {
  __typename: \\"FriendsEdge\\",
  // A cursor used for pagination
  cursor?: string,
  // The character represented by this friendship edge
  node?: Character,
};

export type PageInfo = {
  __typename: \\"PageInfo\\",
  startCursor?: string | null,
  endCursor?: string | null,
  hasNextPage?: boolean,
};

// The episodes in the Star Wars trilogy
export enum Episode {
  NEWHOPE = \\"NEWHOPE\\", // Star Wars Episode IV: A New Hope, released in 1977.
  EMPIRE = \\"EMPIRE\\", // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  JEDI = \\"JEDI\\", // Star Wars Episode VI: Return of the Jedi, released in 1983.
}


export type Starship = {
  __typename: \\"Starship\\",
  // The ID of the starship
  id?: string,
  // The name of the starship
  name?: string,
  // Length of the starship, along the longest axis
  length?: number | null,
  coordinates?: Array< Array< number > > | null,
};

export type Droid = {
  __typename: \\"Droid\\",
  // The ID of the droid
  id?: string,
  // What others call this droid
  name?: string,
  // This droid's friends, or an empty list if they have none
  friends?:  Array<Character | null > | null,
  // The friends of the droid exposed as a connection with edges
  friendsConnection?: FriendsConnection,
  // The movies this droid appears in
  appearsIn?: Array< Episode | null >,
  // This droid's primary function
  primaryFunction?: string | null,
};

export type HeroNameQuery = {
  hero: ( {
      __typename: \\"Human\\",
      // The name of the character
      name: string,
    } | {
      __typename: \\"Droid\\",
      // The name of the character
      name: string,
    }
  ) | null,
};

export type HeroWithNameFragment = ( {
      __typename: \\"Human\\",
      // The name of the character
      name: string,
    } | {
      __typename: \\"Droid\\",
      // The name of the character
      name: string,
    }
  );
"
`;

exports[`TypeScript code generation #generateSource() should have __typename value matching fragment type on specific type 1`] = `
"/* tslint:disable */
/* eslint-disable */
//  This file was automatically generated and should not be edited.

export type Droid = {
  __typename: \\"Droid\\",
  // The ID of the droid
  id?: string,
  // What others call this droid
  name?: string,
  // This droid's friends, or an empty list if they have none
  friends?:  Array<Character | null > | null,
  // The friends of the droid exposed as a connection with edges
  friendsConnection?: FriendsConnection,
  // The movies this droid appears in
  appearsIn?: Array< Episode | null >,
  // This droid's primary function
  primaryFunction?: string | null,
};

export type Character = {
  __typename: \\"Character\\",
  // The ID of the character
  id?: string,
  // The name of the character
  name?: string,
  // The friends of the character, or an empty list if they have none
  friends?:  Array<Character | null > | null,
  // The friends of the character exposed as a connection with edges
  friendsConnection?: FriendsConnection,
  // The movies this character appears in
  appearsIn?: Array< Episode | null >,
};

export type Human = {
  __typename: \\"Human\\",
  // The ID of the human
  id?: string,
  // What this human calls themselves
  name?: string,
  // The home planet of the human, or null if unknown
  homePlanet?: string | null,
  // Height in the preferred unit, default is meters
  height?: number | null,
  // Mass in kilograms, or null if unknown
  mass?: number | null,
  // This human's friends, or an empty list if they have none
  friends?:  Array<Character | null > | null,
  // The friends of the human exposed as a connection with edges
  friendsConnection?: FriendsConnection,
  // The movies this human appears in
  appearsIn?: Array< Episode | null >,
  // A list of starships this person has piloted, or an empty list if none
  starships?:  Array<Starship | null > | null,
};

export type FriendsConnection = {
  __typename: \\"FriendsConnection\\",
  // The total number of friends
  totalCount?: number | null,
  // The edges for each of the character's friends.
  edges?:  Array<FriendsEdge | null > | null,
  // A list of the friends, as a convenience when edges are not needed.
  friends?:  Array<Character | null > | null,
  // Information for paginating this connection
  pageInfo?: PageInfo,
};

export type FriendsEdge = {
  __typename: \\"FriendsEdge\\",
  // A cursor used for pagination
  cursor?: string,
  // The character represented by this friendship edge
  node?: Character,
};

export type PageInfo = {
  __typename: \\"PageInfo\\",
  startCursor?: string | null,
  endCursor?: string | null,
  hasNextPage?: boolean,
};

// The episodes in the Star Wars trilogy
export enum Episode {
  NEWHOPE = \\"NEWHOPE\\", // Star Wars Episode IV: A New Hope, released in 1977.
  EMPIRE = \\"EMPIRE\\", // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  JEDI = \\"JEDI\\", // Star Wars Episode VI: Return of the Jedi, released in 1983.
}


export type Starship = {
  __typename: \\"Starship\\",
  // The ID of the starship
  id?: string,
  // The name of the starship
  name?: string,
  // Length of the starship, along the longest axis
  length?: number | null,
  coordinates?: Array< Array< number > > | null,
};

export type DroidNameQuery = {
  droid?:  {
    __typename: \\"Droid\\",
    // What others call this droid
    name: string,
  } | null,
};

export type DroidWithNameFragment = {
  __typename: \\"Droid\\",
  // What others call this droid
  name: string,
};
"
`;

exports[`TypeScript code generation #generateSource() should have the correct __typename(s) for nested fragments 1`] = `
"/* tslint:disable */
/* eslint-disable */
//  This file was automatically generated and should not be edited.

export type Human = {
  __typename: \\"Human\\",
  // The ID of the human
  id?: string,
  // What this human calls themselves
  name?: string,
  // The home planet of the human, or null if unknown
  homePlanet?: string | null,
  // Height in the preferred unit, default is meters
  height?: number | null,
  // Mass in kilograms, or null if unknown
  mass?: number | null,
  // This human's friends, or an empty list if they have none
  friends?:  Array<Character | null > | null,
  // The friends of the human exposed as a connection with edges
  friendsConnection?: FriendsConnection,
  // The movies this human appears in
  appearsIn?: Array< Episode | null >,
  // A list of starships this person has piloted, or an empty list if none
  starships?:  Array<Starship | null > | null,
};

export type Character = {
  __typename: \\"Character\\",
  // The ID of the character
  id?: string,
  // The name of the character
  name?: string,
  // The friends of the character, or an empty list if they have none
  friends?:  Array<Character | null > | null,
  // The friends of the character exposed as a connection with edges
  friendsConnection?: FriendsConnection,
  // The movies this character appears in
  appearsIn?: Array< Episode | null >,
};

export type Droid = {
  __typename: \\"Droid\\",
  // The ID of the droid
  id?: string,
  // What others call this droid
  name?: string,
  // This droid's friends, or an empty list if they have none
  friends?:  Array<Character | null > | null,
  // The friends of the droid exposed as a connection with edges
  friendsConnection?: FriendsConnection,
  // The movies this droid appears in
  appearsIn?: Array< Episode | null >,
  // This droid's primary function
  primaryFunction?: string | null,
};

export type FriendsConnection = {
  __typename: \\"FriendsConnection\\",
  // The total number of friends
  totalCount?: number | null,
  // The edges for each of the character's friends.
  edges?:  Array<FriendsEdge | null > | null,
  // A list of the friends, as a convenience when edges are not needed.
  friends?:  Array<Character | null > | null,
  // Information for paginating this connection
  pageInfo?: PageInfo,
};

export type FriendsEdge = {
  __typename: \\"FriendsEdge\\",
  // A cursor used for pagination
  cursor?: string,
  // The character represented by this friendship edge
  node?: Character,
};

export type PageInfo = {
  __typename: \\"PageInfo\\",
  startCursor?: string | null,
  endCursor?: string | null,
  hasNextPage?: boolean,
};

// The episodes in the Star Wars trilogy
export enum Episode {
  NEWHOPE = \\"NEWHOPE\\", // Star Wars Episode IV: A New Hope, released in 1977.
  EMPIRE = \\"EMPIRE\\", // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  JEDI = \\"JEDI\\", // Star Wars Episode VI: Return of the Jedi, released in 1983.
}


export type Starship = {
  __typename: \\"Starship\\",
  // The ID of the starship
  id?: string,
  // The name of the starship
  name?: string,
  // Length of the starship, along the longest axis
  length?: number | null,
  coordinates?: Array< Array< number > > | null,
};

export type FindHumanQueryVariables = {
  id?: string,
};

export type FindHumanQuery = {
  human?:  {
    __typename: \\"Human\\",
    // The ID of the human
    id: string,
    // What this human calls themselves
    name: string,
    // A list of starships this person has piloted, or an empty list if none
    starships?:  Array< {
      __typename: \\"Starship\\",
      // The ID of the starship
      id: string,
      // The name of the starship
      name: string,
    } | null > | null,
  } | null,
};

export type humanDetailsFragment = {
  __typename: \\"Human\\",
  // The ID of the human
  id: string,
  // What this human calls themselves
  name: string,
  // A list of starships this person has piloted, or an empty list if none
  starships?:  Array< {
    __typename: string,
    // The ID of the starship
    id: string,
    // The name of the starship
    name: string,
  } | null > | null,
};

export type starshipDetailsFragment = {
  __typename: \\"Starship\\",
  // The ID of the starship
  id: string,
  // The name of the starship
  name: string,
};
"
`;
